[project]
name = "repl-session"
version = "0.1.0"
description = "Runs a session with a Read-Eval-Print-Loop (REPL). Takes JSON as input gives JSON as output."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argh>=0.30.5",
    "msgspec>=0.19.0",
    "pexpect>=4.9.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "entangled-cli>=2.1.13",
    "mkdocs-material>=9.6.20",
    "ty>=0.0.1a21",
]

[project.scripts]
repl-session = "repl_session:main"

[tool.uv]
package = true
